--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8"/>
     <title>ReactJS + Spring Data REST</title>
     <link rel="stylesheet" href="/main.css" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 </head>
 <body>
 	<div>
-		Hello, <span id="ownername" th:text="${#authentication.name}">user</span>.
-		<form th:action="@{/logout}" method="post">
-			<input type="submit" value="Log Out"/>
-		</form>
+		<span id="ownername" th:text="${#authentication.name}" style="visibility: hidden;">user</span>.
+<!--		<form th:action="@{/logout}" method="post">-->
+<!--			<input type="submit" value="Log Out"/>-->
+<!--		</form>-->
 	</div>
-	<div id="react"></div>
+	<div id="root"></div>
 	<script src="built/bundle.js"></script>
 </body>
 </html>
